--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <title>Coming soon!</title>
-<link rel=stylesheet href=css/normalize.css>
-<link rel=stylesheet href=css/the.css>
+<link rel=stylesheet href=normalize.css>
+<link rel=stylesheet href=the.css>
 <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
 
 </head>
